[package]
name = "tpin"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
confy = "0.6.1"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.122"
